--- a/styles/main.css
+++ b/styles/main.css
@@ -1,68 +1,85 @@
-.css-grid{
+.css-grid {
     background-color: #555555;
     text-align: center;
     vertical-align: middle;
 }
 
+
 /* .css-grid .row{
    
 } */
 
-.css-grid .row .col{
+.css-grid .row .col {
     width: 20%;
     height: 20vh;
     margin: 1px 0px 0px 1px;
     display: inline-block;
 }
 
+
 /* .css-grid .row .col:last-of-type{
 
 } */
 
-.css-grid .row .col:nth-of-type(1){
-    background-color: aliceblue;
-}
-.css-grid .row .col:nth-of-type(2){
-    background-color: aliceblue;
-}
-.css-grid .row .col:nth-of-type(3){
-    background-color: aliceblue;
-}
-.css-grid .row .col:nth-of-type(4){
-    background-color: aliceblue;
-}
-.css-grid .row .col:nth-of-type(5){
-    background-color: aliceblue;
-}
-.css-grid .row .col:nth-of-type(6){
-    background-color: aliceblue;
-}
-.css-grid .row .col:nth-of-type(7){
-    background-color: aliceblue;
-}
-.css-grid .row .col:nth-of-type(8){
-    background-color: aliceblue;
-}
-.css-grid .row .col:nth-of-type(9){
-    background-color: aliceblue;
-}
-.css-grid .row .col:nth-of-type(10){
-    background-color: aliceblue;
-}
-.css-grid .row .col:nth-of-type(11){
-    background-color: aliceblue;
-}
-.css-grid .row .col:nth-of-type(12){
+.css-grid .row .col:nth-of-type(1) {
     background-color: aliceblue;
 }
 
-@media screen and (max-width: 960px){
-    .css-grid .row .col{
+.css-grid .row .col:nth-of-type(2) {
+    background-color: aliceblue;
+}
+
+.css-grid .row .col:nth-of-type(3) {
+    background-color: aliceblue;
+}
+
+.css-grid .row .col:nth-of-type(4) {
+    background-color: aliceblue;
+}
+
+.css-grid .row .col:nth-of-type(5) {
+    background-color: aliceblue;
+}
+
+.css-grid .row .col:nth-of-type(6) {
+    background-color: aliceblue;
+}
+
+.css-grid .row .col:nth-of-type(7) {
+    background-color: aliceblue;
+}
+
+.css-grid .row .col:nth-of-type(8) {
+    background-color: aliceblue;
+}
+
+.css-grid .row .col:nth-of-type(9) {
+    background-color: aliceblue;
+}
+
+.css-grid .row .col:nth-of-type(10) {
+    background-color: aliceblue;
+}
+
+.css-grid .row .col:nth-of-type(11) {
+    background-color: aliceblue;
+}
+
+.css-grid .row .col:nth-of-type(12) {
+    background-color: aliceblue;
+}
+
+.selected-menu-item {
+    background-color: hsl(200, 100%, 50%);
+}
+
+@media screen and (max-width: 960px) {
+    .css-grid .row .col {
         width: 45%;
     }
 }
 
-@media screen and (max-width: 450px){
+@media screen and (max-width: 450px) {
     .css-grid .row .col {
         width: 90%;
     }
