--- a/styles/main.css
+++ b/styles/main.css
@@ -89,7 +89,8 @@
     background-color: seagreen;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 5rem;
+    /* grid-auto-rows: 60px; */
+    grid-auto-rows: minmax(100px, auto);
     gap: 1rem;
     padding: 1rem;
 }
