--- a/styles/main.css
+++ b/styles/main.css
@@ -89,13 +89,21 @@
     background-color: seagreen;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    /* grid-auto-rows: 60px; */
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: 100px;
+    /* grid-auto-rows: minmax(100px, auto); */
     gap: 1rem;
     padding: 1rem;
+    height: 500px;
+    align-items: end;
+    align-content: center;
 }
 
 #grid>* {
     border: 2px solid salmon;
     border-radius: 5px;
+    text-align: center;
+}
+
+#grid>div:nth-of-type(3) {
+    align-self: stretch;
 }
