--- a/styles/main.css
+++ b/styles/main.css
@@ -87,15 +87,16 @@
 
 #grid {
     background-color: seagreen;
+    border: 2px solid rgb(21, 95, 53);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 100px;
-    /* grid-auto-rows: minmax(100px, auto); */
+    /* grid-auto-rows: 100px; */
+    grid-auto-rows: minmax(100px, auto);
     gap: 1rem;
-    padding: 1rem;
+    /* padding: 1rem; */
     height: 500px;
-    align-items: end;
-    align-content: center;
+    /* align-items: end; */
+    /* align-content: center; */
 }
 
 #grid>* {
@@ -106,4 +107,5 @@
 
 #grid>div:nth-of-type(3) {
     align-self: stretch;
+    /* height: 100%; */
 }
