--- a/styles/main.css
+++ b/styles/main.css
@@ -91,12 +91,13 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     /* grid-auto-rows: 100px; */
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: minmax(100px, 1fr);
     gap: 1rem;
     /* padding: 1rem; */
     height: 500px;
     /* align-items: end; */
     /* align-content: center; */
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
 
 #grid>* {
