--- a/styles/main.css
+++ b/styles/main.css
@@ -89,7 +89,7 @@
     background-color: seagreen;
     border: 2px solid rgb(21, 95, 53);
     display: grid;
-    /* grid-template-columns: repeat(3, 1fr); */
+    grid-template-columns: repeat(3, 1fr);
     /* grid-auto-rows: 100px; */
     grid-auto-rows: minmax(100px, 1fr);
     gap: 1rem;
@@ -97,7 +97,8 @@
     height: 500px;
     /* align-items: end; */
     /* align-content: center; */
-    grid-template-columns: repeat(auto-fill, calc(50% - 10px));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    position: relative;
 }
 
 #grid>* {
@@ -109,4 +110,16 @@
 #grid>div:nth-of-type(3) {
     align-self: stretch;
     /* height: 100%; */
+}
+
+#grid> :nth-of-type(4) {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    position: absolute;
+    top: 40px;
+    left: 40px;
+    /*make the div span the whole space assigned to it*/
+    width: 100%;
 }
