Scatter contents of a single grid element Use "display: contents" property to reflow contents of grid item as though they are grid items themselves

--- a/styles/main.css
+++ b/styles/main.css
@@ -117,9 +117,18 @@
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 3;
-    position: absolute;
+    /* position: absolute;
     top: 120px;
-    left: 40px;
+    left: 40px; */
     /*make the div span the whole space assigned to it*/
     /* width: 100%; */
+}
+
+#grid p {
+    border: 2px dashed hotpink;
+    border-radius: 5px;
+}
+
+#grid> :nth-of-type(2) {
+    display: contents;
 }
